[package]
name = "headhunter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "headhunter"
path = "src/lib.rs"

[[bin]]
name = "headhunter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.80"
thiserror = "1.0.57"
windows = { version = "0.54.0" }
windows-sys = { version = "0.52.0", features = ["Win32", "Win32_System", "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp", "Win32_Foundation"] }
